examples/errors/header/invalid_x_value.abc
X:abc
T:Non-numeric X
K:C
% H012: Invalid reference number (not numeric)
CDEF|
